--- a/sass/_encabezado.scss
+++ b/sass/_encabezado.scss
@@ -28,6 +28,11 @@ $lavanda:#d9a4ff;
         padding-top: 30px;
         padding-bottom: 60px;
     }
+    ul{
+        background-color: $violet;
+    
+    }
+}
     
 
     /*tamaño compu*/
