--- a/sass/_encabezado.scss
+++ b/sass/_encabezado.scss
@@ -28,9 +28,8 @@ $lavanda:#d9a4ff;
         padding-top: 30px;
         padding-bottom: 60px;
     }
-    ul{
+    .nav-link{
         background-color: $violet;
-    
     }
 }
     
