--- a/sass/_cuerpo.scss
+++ b/sass/_cuerpo.scss
@@ -51,7 +51,7 @@ $lavanda:#e1c1ff85;
 
 body{
     color: cornsilk;
-    background-image: url(ideaNovillo/img/fondo.wep);
+    background-image: url(fondo.png);
     background-size:cover;
     background-position: center center;
     display: flex;
