--- a/sass/estilos.css
+++ b/sass/estilos.css
@@ -91,7 +91,6 @@ header {
 }
 
 nav {
-  height: 40px;
   background-color: #301B3F;
   width: 100%;
   font-size: 20px;
@@ -101,18 +100,12 @@ a {
   text-decoration: none;
 }
 
-.menu {
-  position: relative;
-  padding: 5px;
-  color: khaki;
-  background-color: #301B3F;
-}
-
-ul li:hover {
-  -webkit-transform: scale(1.3);
-          transform: scale(1.3);
-}
-
+/*.menu{
+    position: relative;
+    padding: 5px;
+    color: $letras;
+    background-color: $violet;
+    }*/
 ul li :hover {
   background-color: khaki;
   color: #301B3F;
