--- a/sass/_encabezado.scss
+++ b/sass/_encabezado.scss
@@ -96,6 +96,38 @@ li{
 }
 
 
+
+@media only screen and (max-width: 767px) {
+    .header__div{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        background-color: $fondoEnc;
+        width: 100%;
+        height: 100px;
+    }
+
+    .lavs{
+        display: flex;
+        justify-content: center;
+        height: 90px;
+
+    }
+    
+    .header__h1--style{
+        display: flex;
+        color: $violet;
+        text-align: center;
+        font-family: 'Andada Pro', serif;
+        font-size: 350%;
+        width: auto;
+        height: 80px;
+        padding-top: 30px;
+        padding-bottom: 60px;
+    }
+
+    
+}
 @media only screen and (max-width: 479px){
     
     .header__div{
@@ -129,12 +161,4 @@ li{
     .navbar{
         height: 50px;
     }
-}
-
-@media only screen and (max-width: 767px) {
-    .navbar{
-        height: 50px;
-    }
-
-    
 }
