--- a/sass/estilos.css
+++ b/sass/estilos.css
@@ -113,6 +113,46 @@ li {
   list-style: none;
 }
 
+@media only screen and (max-width: 767px) {
+  .header__div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    background-color: #f6d098b7;
+    width: 100%;
+    height: 100px;
+  }
+  .lavs {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: 90px;
+  }
+  .header__h1--style {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    color: #301B3F;
+    text-align: center;
+    font-family: 'Andada Pro', serif;
+    font-size: 350%;
+    width: auto;
+    height: 80px;
+    padding-top: 30px;
+    padding-bottom: 60px;
+  }
+}
+
 @media only screen and (max-width: 479px) {
   .header__div {
     display: -webkit-box;
@@ -151,12 +191,6 @@ li {
     padding-top: 30px;
     padding-bottom: 60px;
   }
-  .navbar {
-    height: 50px;
-  }
-}
-
-@media only screen and (max-width: 767px) {
   .navbar {
     height: 50px;
   }
