Servicios con divs

--- a/sass/_cuerpo.scss
+++ b/sass/_cuerpo.scss
@@ -134,6 +134,7 @@ body{
         border: 2px solid cornsilk;
         display: flex;
         justify-content: center;
+        flex-direction: row;
 
 }
 }
