--- a/sass/estilos.css
+++ b/sass/estilos.css
@@ -53,7 +53,7 @@ header {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-color: #f6d098b7;
+  background-color: #f6d098e3;
   width: 100%;
   height: 150px;
 }
@@ -125,7 +125,7 @@ li {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    background-color: #f6d098b7;
+    background-color: #f6d098e3;
     width: 100%;
     height: 100px;
   }
@@ -165,7 +165,7 @@ li {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    background-color: #f6d098b7;
+    background-color: #f6d098e3;
     width: 100%;
     height: 100px;
   }
@@ -324,6 +324,10 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .pot-imagen {
@@ -336,6 +340,10 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .lav-imagen {
@@ -348,6 +356,10 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 /*Servicios*/
