--- a/sass/estilos.css
+++ b/sass/estilos.css
@@ -211,7 +211,7 @@ li {
     border-style: groove;
     border-color: #F6D198;
   }
-  .main--style2 {
+  .main--style2, .main--style3 {
     background-color: #e1c1ff85;
     font-size: larger;
     text-align: justify;
@@ -264,7 +264,7 @@ body {
   border-color: #F6D198;
 }
 
-.main--style2 {
+.main--style2, .main--style3 {
   background-color: #e1c1ff85;
   font-size: larger;
   text-align: justify;
@@ -274,6 +274,58 @@ body {
   padding: 5px 30px 5px 30px;
   border: #F6D198 solid 1px;
   border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  border: 2px cornsilk solid;
+}
+
+.main--style3 {
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: "imgg nomb" "imgg desc" "imgg cuid";
+  -ms-grid-columns: 38% 48%;
+      grid-template-columns: 38% 48%;
+  -ms-grid-rows: 50px 1fr 1fr;
+      grid-template-rows: 50px 1fr 1fr;
+  grid-column-gap: 2px;
+  grid-row-gap: 10px;
+}
+
+.imgg {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 3;
+  -ms-grid-column: 1;
+  grid-area: imgg;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+.nomb {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: nomb;
+}
+
+.desc {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: desc;
+}
+
+.cuid {
+  -ms-grid-row: 3;
+  -ms-grid-column: 2;
+  grid-area: cuid;
 }
 
 .main__h2--font {
@@ -292,8 +344,7 @@ body {
 .imag {
   height: auto;
   width: 100%;
-  display: -ms-grid;
-  display: grid;
+  /*display: grid;*/
 }
 
 .prop {
@@ -315,51 +366,39 @@ body {
 
 /*Nuestros Productos*/
 .sucu-imagen {
-  height: auto;
-  width: 200px;
   border: 2px solid cornsilk;
+  width: 350px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -ms-flex-line-pack: justify;
+      align-content: space-between;
 }
 
 .pot-imagen {
-  height: auto;
-  width: 200px;
   border: 2px solid cornsilk;
+  width: 350px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -ms-flex-line-pack: justify;
+      align-content: space-between;
 }
 
 .lav-imagen {
-  height: auto;
-  width: 200px;
   border: 2px solid cornsilk;
+  width: 350px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -ms-flex-line-pack: justify;
+      align-content: space-between;
 }
 
 /*Servicios*/
